--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <p>Hi! This is my directory for web class.</p>
         <h2>Directory</h2>
         <ul>
-            <li><a href="assignment-one/index.html"/></a></li>
+            <li><a href="assignment-one/index.html">Assignment One</a></li>
         </ul>
     </body>
 </html>
