--- a/assignment-two/index.html
+++ b/assignment-two/index.html
@@ -8,7 +8,7 @@
     <body>
         <!--Navigation Bar -->
         <div>
-            <img src="images/Screenshot%202025-10-06%20at%2010.50.52%E2%80%AFAM.png" width="100" alt="Logo Photo"/>
+            <img src="images/LogoPhoto.jpg" alt="logo" width="120"/>
             <nav>
                 <a href="../index.html">Directory</a>
                  <a href="../assignment-one/index.html">About</a>
