--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
     <head>
         <meta charset="UTF-8" />
         <title>Anny Christian</title>
+        <link rel="stylesheet" href="css/styles.css"/>
     </head>
     <body>
         <h1>Anny Christian's Web Directory</h1>
-        <p>Hi! This is my directory for web class.</p>
-        <h2>Directory</h2>
+        <p class=direct>Hi! This is my directory for web class.</p>
+        <h2 class=direct>Directory</h2>
+        
         <ul>
             <li><a href="assignment-one/index.html">Assignment One</a></li>
             <li><a href="assignment-two/index.html">Assignment Two</a></li>
             <li><a href="assignment-three/index.html">Assignment Three</a></li>
-            </ul>
+        </ul>
+        
     </body>
 </html>
