--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         <ul>
             <li><a href="assignment-one/index.html">Assignment One</a></li>
             <li><a href="assignment-two/index.html">Assignment Two</a></li>
-            <li><a href="assignment-three/index.html">Assignment Three</a></li>
-            <li><a href="assignment-four/type.html"> Assignment Four</a> </li>
+            <li><a href="assignment-three/index.html">Assignment Three</a></li> 
+            
+            <li><a href="assignment-five/index.html"> Assignment Five
+            </a></li>
         </ul>
         
     </body>
