--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <li><a href="assignment-four/type.html"> Assignment Four</a></li>
             <li><a href="assignment-five/index.html"> Assignment Five
             </a></li>
+             <li><a href="assignment-six/index.html"> Assignment Six
+            </a></li>
         </ul>
         
     </body>
