--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </a></li>
              <li><a href="assignment-six/index.html"> Assignment Six
             </a></li>
+            <li><a href="assignment-seven/index.html"> Assignment Seven</a></li>
         </ul>
         
     </body>
