--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
              <li><a href="assignment-six/index.html"> Assignment Six
             </a></li>
             <li><a href="assignment-seven/index.html"> Assignment Seven</a></li>
+            <li><a href="final-assignment/index.html"> Final Assignment</a></li>
         </ul>
         
     </body>
